# django_project_template

./: .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  sample.env
src/config/: settings.py
