[tool.poetry]
name = "django-project-template"
version = "0.1.0"
description = "Репозиторий с шаблоном архитектуры проекта Django"
authors = ["BaronSamedi"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.0.3"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
